--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@
     --nav-height: 7.2rem;
 }
 
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
 body {
     font-family: 'DM Sans';
     font-size: 1.6rem;
@@ -30,13 +35,19 @@ body {
     padding-inline: 2.4rem;
 }
 
+ul{
+    list-style: none;
+}
+
+/*============HEADER===============================*/
+
 header{
     margin-top: calc(4.1rem + var(--nav-height));
 }
 
 header::before{  /*adicionar uma tag antes dos itens do header*/
     content: "";
-    width: 100vw;
+    width: 100%;
     height: 108rem/*calc(108rem+var(--nav-height))*/;
     
     background-color: var(--brand-light);
@@ -138,7 +149,7 @@ header button{
     margin-bottom: 0.4rem;
 }
 
-
+/*============NAVIGATION===============================*/
 nav{
     display: flex;
     /*padding: 1.6rem 2.4rem;*/
@@ -170,5 +181,62 @@ nav.scroll svg:nth-child(2) path{
     stroke: white;
 }
 
+/*============MENU EXPENDED===============================*/
 
 
+body.menu-expended{
+    overflow: hidden;
+}
+
+.menu,
+.close-menu,
+body.menu-expended .open-menu{
+    opacity: 0;
+    visibility: 0;
+}
+
+body.menu-expended .menu,
+body.menu-expended .close-menu{
+    opacity: 1;
+    visibility: 1;
+}
+
+body.menu-expended .menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--primary-color);
+
+    width: 100vw;
+    height: 100vw;
+}
+
+body.menu-expended nav{
+    position: relative;
+}
+
+.menu .button{
+    background-color: white;
+    border-radius: 4rem;
+
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.3rem;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    color: var(--primary-color);
+ 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1.6rem 3.2rem;
+}
+
+.social-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3.2rem;
+}
