--- a/style.css
+++ b/style.css
@@ -181,27 +181,32 @@ nav.scroll svg:nth-child(2) path{
     stroke: white;
 }
 
+nav button{
+    background: none;
+    border: none;
+}
+
 /*============MENU EXPENDED===============================*/
 
 
-body.menu-expended{
+body.menu-expanded{
     overflow: hidden;
 }
 
 .menu,
 .close-menu,
-body.menu-expended .open-menu{
+body.menu-expanded .open-menu{
     opacity: 0;
     visibility: 0;
 }
 
-body.menu-expended .menu,
-body.menu-expended .close-menu{
+body.menu-expanded .menu,
+body.menu-expanded .close-menu{
     opacity: 1;
     visibility: 1;
 }
 
-body.menu-expended .menu{
+body.menu-expanded .menu{
     position: fixed;
     top: 0;
     left: 0;
@@ -211,8 +216,25 @@ body.menu-expended .menu{
     height: 100vw;
 }
 
-body.menu-expended nav{
+body.menu-expanded nav{
     position: relative;
+}
+
+menu ul:nth-child(1){
+    display: flex;
+    flex-direction: column;
+    gap: 4.8rem;
+
+    margin-top: 6rem;
+
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 3.1rem;
+}
+
+.menu ul li a{
+    color: white;
+    text-decoration: none;
 }
 
 .menu .button{
@@ -239,4 +261,18 @@ body.menu-expended nav{
     justify-content: center;
     align-items: center;
     gap: 3.2rem;
+}
+
+body.menu-expanded logo{
+    position: relative;
+    z-index: 100;
+}
+
+body.menu-expanded logo path{
+    fill: white;
+}
+
+
+body.menu-expanded button path{
+    stroke: white;
 }
