--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ body.menu-expanded nav{
     position: relative;
 }
 
-menu ul:nth-child(1){
+.menu ul:nth-child(1){
     display: flex;
     flex-direction: column;
     gap: 4.8rem;
