--- a/style.css
+++ b/style.css
@@ -26,17 +26,22 @@ body {
     font-family: 'DM Sans';
     font-size: 1.6rem;
     text-align: center;
+
+    overflow: overlay;
 }
 
 .wrapper{
     width: 37.5rem;
     margin-inline: auto;
-    
     padding-inline: 2.4rem;
 }
 
 ul{
     list-style: none;
+}
+
+button{
+    cursor: pointer;
 }
 
 /*============HEADER===============================*/
@@ -154,7 +159,7 @@ nav{
     display: flex;
     /*padding: 1.6rem 2.4rem;*/
     height: var(--nav-height);
-    
+
     position: fixed;
 
     top: 0;
@@ -165,8 +170,9 @@ nav{
 nav .wrapper{
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
 }
+
 
 nav.scroll{
     background: var(--primary-color);
@@ -177,7 +183,7 @@ nav.scroll svg:nth-child(1) path{
     fill: white;
 }
 
-nav.scroll svg:nth-child(2) path{
+nav.scroll button path{
     stroke: white;
 }
 
@@ -188,6 +194,10 @@ nav button{
 
 /*============MENU EXPENDED===============================*/
 
+body.menu-expanded > :not(nav){
+    display: none;
+}
+
 
 body.menu-expanded{
     overflow: hidden;
@@ -197,13 +207,13 @@ body.menu-expanded{
 .close-menu,
 body.menu-expanded .open-menu{
     opacity: 0;
-    visibility: 0;
+    visibility: hidden;
 }
 
 body.menu-expanded .menu,
 body.menu-expanded .close-menu{
     opacity: 1;
-    visibility: 1;
+    visibility: visible;
 }
 
 body.menu-expanded .menu{
@@ -213,7 +223,7 @@ body.menu-expanded .menu{
     background-color: var(--primary-color);
 
     width: 100vw;
-    height: 100vw;
+    height: 150vw;
 }
 
 body.menu-expanded nav{
@@ -225,7 +235,8 @@ body.menu-expanded nav{
     flex-direction: column;
     gap: 4.8rem;
 
-    margin-top: 6rem;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
 
     font-size: 2.4rem;
     font-weight: 700;
@@ -238,9 +249,14 @@ body.menu-expanded nav{
 }
 
 
-.menu .button{
+.menu-expanded .button{
     background-color: white;
     border-radius: 4rem;
+
+    width: 27.4rem;
+    height: 5.5rem;
+
+    margin-inline: auto;
 
     font-size: 1.8rem;
     font-weight: 700;
