--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     background-color: var(--bg-ligth);
 }
 
+
 .wrapper{
     width: 37.5rem;
     margin-inline: auto;
@@ -59,11 +60,11 @@ section{
 
 /*============HEADER===============================*/
 
-header{
-    margin-top: calc(4.1rem + var(--nav-height));
+#home{
+    padding-top: calc(4rem + var(--nav-height));
 }
 
-header::before{  /*adicionar uma tag antes dos itens do header*/
+#home::before{  /*adicionar uma tag antes dos itens do header*/
     content: "";
     width: 100%;
     height: 108rem/*calc(108rem+var(--nav-height))*/;
@@ -77,7 +78,7 @@ header::before{  /*adicionar uma tag antes dos itens do header*/
     z-index: -1;
 }
 
-header img{
+#home img{
     width: 26.4rem;
     display: block;
     margin-inline: auto;
@@ -85,7 +86,7 @@ header img{
     object-position: 0 2rem;
 }
 
-header h4{
+#home h4{
 font-size: 1.4rem; /*1rem = root font size defined by user*/
 line-height: 150%;
 color: var(--primary-color);
@@ -94,7 +95,7 @@ margin-bottom: 1.6rem;
 
 }
 
-header h1{
+#home h1{
     font-size: 3.4rem;
     line-height: 130%;
     text-align: center;
@@ -103,7 +104,7 @@ header h1{
     margin-bottom: 2.4rem;
 }
 
-header p{
+#home p{
     font-size: 1.8rem;
     line-height: 180%;
     color : var(--paragraph);
@@ -111,7 +112,7 @@ header p{
     margin-bottom: 3.2rem;
 }
 
-header button{
+#home button{
     background-color: var(--primary-color);
     
     border: none;
@@ -229,6 +230,10 @@ body.menu-expanded .close-menu{
     visibility: visible;
 }
 
+.menu{
+    transform: translateY(100%);
+}
+
 body.menu-expanded .menu{
     position: fixed;
     top: 0;
@@ -236,7 +241,14 @@ body.menu-expanded .menu{
     background-color: var(--primary-color);
 
     width: 100vw;
-    height: 150vw;
+    height: 100vh;
+
+    padding-top: var(--nav-height);
+
+    transition: transform 300ms;
+
+    transform: translateY(0);
+
 }
 
 body.menu-expanded nav{
@@ -354,4 +366,60 @@ margin-bottom: 6rem;
 
 #services .card h3{
     margin-block: 1.6rem;
+}
+
+
+.notification{
+    position: absolute ;
+    display: flex;
+    max-width: 30rem;
+    padding: 2rem 1.5rem;
+    margin-top: 0.5rem;
+    margin-left: 35rem;
+    border-radius: 0.4rem;
+    background-color: var(--headline-color);
+    color: var(--brand-light);
+    box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .1);
+    transform: translateY(3rem);
+    opacity: 0;
+    visibility: hidden;
+    animation: fade 4s linear forwards;
+}
+
+.progress{
+    position: absolute;
+    left: 0.5rem;
+    bottom: 0.5rem;
+    width: 0;
+    height: .3rem;
+    background-image: linear-gradient(to right, var(--brand-light), var(--primary-color));
+    border-radius: .4rem;
+    animation: progress 3s .25s linear forwards;
+}
+
+@keyframes fade {
+
+    5%{
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0px);
+    }
+    90%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    95%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes progress {
+    to{
+        width: calc(100% - 10px);
+    }
+    
 }
