--- a/style.css
+++ b/style.css
@@ -61,13 +61,13 @@ section{
 /*============HEADER===============================*/
 
 #home{
-    padding-top: calc(4rem + var(--nav-height));
+    padding-top: calc(4.2rem + var(--nav-height));
 }
 
 #home::before{  /*adicionar uma tag antes dos itens do header*/
     content: "";
     width: 100%;
-    height: 108rem/*calc(108rem+var(--nav-height))*/;
+    height: 108rem/*calc(108rem+var(--nav-height))108rem*/;
     
     background-color: var(--brand-light);
     display: block;
@@ -179,6 +179,8 @@ nav{
     top: 0;
     left: 50%;
     transform: translateX(-50%); /*identifica o tamanho total do componente */
+
+    z-index: 100;
 }
 
 nav .wrapper{
@@ -373,8 +375,8 @@ margin-bottom: 6rem;
     position: absolute ;
     display: flex;
     max-width: 30rem;
+    top: 0;
     padding: 2rem 1.5rem;
-    margin-top: 0.5rem;
     margin-left: 35rem;
     border-radius: 0.4rem;
     background-color: var(--headline-color);
