--- a/style.css
+++ b/style.css
@@ -58,6 +58,42 @@ section{
     padding-block: 10rem;
 }
 
+section header h4{
+    font-size: 1.4rem; /*1rem = root font size defined by user*/
+    line-height: 150%;
+    color: var(--primary-color);
+    letter-spacing: 0.08rem;
+    
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+}
+
+section header h2{
+    font-size: 3.0rem;
+    line-height: 3.9rem;
+    text-align: center;
+    
+    text-transform: uppercase;
+    
+    color: var(--headline-color);
+}
+
+section header h1{
+    font-size: 3.4rem;
+    line-height: 130%;
+    text-align: center;
+    color: var(--headline-color);
+
+    margin-bottom: 2.4rem;
+}
+
+section .content p{
+    color: var(--paragraph);
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 150%;
+}
+
 /*============HEADER===============================*/
 
 #home{
@@ -86,23 +122,7 @@ section{
     object-position: 0 2rem;
 }
 
-#home h4{
-font-size: 1.4rem; /*1rem = root font size defined by user*/
-line-height: 150%;
-color: var(--primary-color);
-letter-spacing: 0.08em;
-margin-bottom: 1.6rem;
 
-}
-
-#home h1{
-    font-size: 3.4rem;
-    line-height: 130%;
-    text-align: center;
-    color: var(--headline-color);
-
-    margin-bottom: 2.4rem;
-}
 
 #home p{
     font-size: 1.8rem;
@@ -320,26 +340,9 @@ body.menu-expanded button path{
 
 /*=======================Services==================*/
 
-#services header h4{
-    font-size: 1.4rem;
-    line-height: 150%;
 
-    letter-spacing: 0.08rem;
-
-    text-transform: uppercase;
-
-    color: var(--primary-color);
-
-    margin-bottom: 1.6rem;
-}
 
 #services header h2{
-font-size: 3.0rem;
-line-height: 3.9rem;
-text-align: center;
-
-color: var(--headline-color);
-
 margin-bottom: 6rem;
 }
 
@@ -368,7 +371,7 @@ margin-bottom: 6rem;
 
 
     .notification {
-        position: absolute;
+        position: fixed;
         display: flex;
         width: 25vw;
         margin-left: 10%;
@@ -428,3 +431,26 @@ margin-bottom: 6rem;
         
     } 
 
+
+    #about {
+        text-align: left;
+        background-color: var(--brand-beige);
+    }
+
+    #about .content p{
+        margin-top: 2.4rem;
+        margin-bottom: 6rem;
+    }
+
+    #about header h2{
+        margin-bottom: 2.4rem;
+        transform: uppercase;
+    }
+
+
+    /* 
+    img{
+        max-width: 100%; respeita o tamanho do pai
+    }
+    
+    */
