--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ margin-bottom: 6rem;
         gap: 0.8rem;
     }
 
-    /====================FOOTER========================/
+    /*====================FOOTER========================*/
 
 footer {
     background-color: var(--primary-color);
@@ -524,4 +524,16 @@ footer p {
     line-height: 2;
 
     margin-bottom: 3.2rem;
+}
+
+footer .social-links{
+    justify-content: flex-start;
+}
+
+/*=================BackToTopButton=========*/
+
+#backToTopButton{
+    position: fixed;
+    bottom: 1rem;
+    right: 2.5rem;
 }
