--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
 }
 
 :root{          /*elemento pai, pagina*/
+    --hue: 520 ;
     font-size: 62.5%; /*1 rem = 10px*/
-    --primary-color: #00856f;
-    --headline-color: #22262a;
-    --paragraph: #484f56;
-    --brand-beige: #fffaf0;
-    --brand-light: #dce9e3;
-    --brand-green-hover: #00453A;
+    --primary-color: hsl(var(--hue), 100%, 26%); /* #00856f;*/
+    --headline-color: hsl(210, 11%, 15%); /*;#22262a;*/
+    --paragraph: hsl(210, 9%, 31%); /*;#484f56;*/
+    --brand-beige: hsl(39, 100%, 97%); /*;#fffaf0;*/
+    --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%); /*;#dce9e3;*/
+    --brand-green-hover: hsl(var(--hue), 100%, 14%); /*#00453A;*/
 
-    --bg-ligth:#F7F9F9;
+    --bg-ligth: hsl(180, 14%, 97%); /*#F7F9F9;*/
 
     --nav-height: 7.2rem;
 }
@@ -328,6 +329,12 @@ body.menu-expanded .menu{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.menu .button:hover{
+    background-color: var(--primary-color);
+    color: white;
+    filter: brightness(1.3);
 }
 
 .social-links{
